# pathkit

./: .gitignore  CMakeLists.txt  main.cpp  pathkit.h  unity_pathkit_all.cpp  unity_pathkit_core.cpp  unity_pathkit_misc.cpp  unity_pathkit_pathops1.cpp  unity_pathkit_pathops2.cpp
include/private/: SkMutex.h
pathkit/: pathkit.h
pathkit/core/: SkArenaAlloc.cpp  SkArenaAlloc.h  SkContourMeasure.cpp  SkContourMeasure.h  SkCubicClipper.cpp  SkCubicClipper.h  SkGeometry.cpp  SkGeometry.h  SkMalloc.cpp  SkMath.cpp  SkMath.h  SkMathPriv.h  SkMatrix.cpp  SkMatrix.h  SkMatrixPriv.h  SkPaint.cpp  SkPaint.h  SkPaintPriv.cpp  SkPaintPriv.h  SkPath.cpp  SkPath.h  SkPathBuilder.cpp  SkPathBuilder.h  SkPathEffect.cpp  SkPathEffect.h  SkPathEffectBase.h  SkPathMakers.h  SkPathMeasure.cpp  SkPathMeasure.h  SkPathMeasurePriv.h  SkPathPriv.h  SkPathRef.cpp  SkPathTypes.h  SkPoint.cpp  SkPoint.h  SkPoint3.h  SkPointPriv.h  SkRRect.cpp  SkRRect.h  SkRect.cpp  (+14 more)
pathkit/effects/: SkCornerPathEffect.cpp  SkCornerPathEffect.h  SkDashImpl.h  SkDashPathEffect.cpp  SkDashPathEffect.h
pathkit/gpu/: GrVx.h
pathkit/pathops/: SkAddIntersections.cpp  SkAddIntersections.h  SkDConicLineIntersection.cpp  SkDCubicLineIntersection.cpp  SkDCubicToQuads.cpp  SkDLineIntersection.cpp  SkDQuadLineIntersection.cpp  SkIntersectionHelper.h  SkIntersections.cpp  SkIntersections.h  SkLineParameters.h  SkOpAngle.cpp  SkOpAngle.h  SkOpBuilder.cpp  SkOpCoincidence.cpp  SkOpCoincidence.h  SkOpContour.cpp  SkOpContour.h  SkOpCubicHull.cpp  SkOpEdgeBuilder.cpp  SkOpEdgeBuilder.h  SkOpSegment.cpp  SkOpSegment.h  SkOpSpan.cpp  SkOpSpan.h  SkPathOps.h  SkPathOpsAsWinding.cpp  SkPathOpsBounds.h  SkPathOpsCommon.cpp  SkPathOpsCommon.h  SkPathOpsConic.cpp  SkPathOpsConic.h  SkPathOpsCubic.cpp  SkPathOpsCubic.h  SkPathOpsCurve.cpp  SkPathOpsCurve.h  SkPathOpsDebug.cpp  SkPathOpsDebug.h  SkPathOpsLine.cpp  SkPathOpsLine.h  (+18 more)
pathkit/ports/: SkDebug_stdio.cpp  SkMemory_malloc.cpp
pathkit/private/: SkFloatBits.h  SkFloatingPoint.h  SkMalloc.h  SkMutex.h  SkNx.h  SkPathRef.h  SkSafe32.h  SkTArray.h  SkTDArray.h  SkTemplates.h  SkTo.h  SkVx.h
pathkit/utils/: SkDashPath.cpp  SkDashPathPriv.h
src/core/: SkArenaAlloc.h  SkContourMeasure.cpp  SkContourMeasure.h  SkCubicClipper.cpp  SkCubicClipper.h  SkGeometry.cpp  SkGeometry.h  SkMalloc.cpp  SkMath.cpp  SkMath.h  SkMathPriv.h  SkMatrix.cpp  SkMatrix.h  SkMatrixPriv.h  SkPaint.cpp  SkPaint.h  SkPaintPriv.cpp  SkPaintPriv.h  SkPath.cpp  SkPath.h  SkPathBuilder.cpp  SkPathBuilder.h  SkPathEffect.cpp  SkPathEffect.h  SkPathEffectBase.h  SkPathMakers.h  SkPathMeasure.cpp  SkPathMeasure.h  SkPathMeasurePriv.h  SkPathPriv.h  SkPathRef.cpp  SkPathTypes.h  SkPoint.h  SkPoint3.h  SkPointPriv.h  SkRRect.cpp  SkRRect.h  SkRect.cpp  SkRect.h  SkRectPriv.h  (+11 more)
src/effects/: SkCornerPathEffect.cpp  SkCornerPathEffect.h  SkDashPathEffect.cpp  SkDashPathEffect.h
(+52 files in other folders)
